--- a/comunidadeimpressionadora/templates/navbar.html
+++ b/comunidadeimpressionadora/templates/navbar.html
@@ -1,9 +1,57 @@
-<nav class="navbar navbar-expand-lg bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"><span class="bi bi-list"></span></span>
-    </button>
+
+
+<style>
+  nav{
+    position: absolute;
+    display: flex;
+    background-color: rgb(48, 48, 48);
+    
+  }
+
+  a, .bi-list {
+    color: white;
+    
+  }
+
+  .bi-list {
+    display: none;
+    font-size: 1.5rem;
+    margin-top: -5px;
+  }
+
+  .navbar-brand {
+    font-weight: bold;
+  }
+
+  .nav-link {
+    font-size: .95rem;
+  }
+
+  a:hover {
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 0px 4px white;
+  }
+
+  @media (max-width: 991px) {
+    .nav-link {
+      text-indent: 20px;
+      border-top: .5px solid rgba(255, 255, 255, 0.144);
+    }
+
+    .bi-list {
+      display: block;
+    }
+
+  }
+
+</style>
+
+
+<nav class="navbar navbar-expand-lg">
+  <div class="container">
+    <a class="navbar-brand me-5" href="{{ url_for('home') }}">Comunidade Impressionadora</a>
+    
+      <span class="navbar-toggler-icon bi bi-list" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" ></span>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
