--- a/comunidadeimpressionadora/templates/login.html
+++ b/comunidadeimpressionadora/templates/login.html
@@ -2,7 +2,7 @@
 
 {% block body %}
     <div class="container">
-        <h1>Faça Login ou Crie sua Conta para dd continuar</h1>
+        <h1 style="text-align: center; padding: 1rem; color: rgba(0, 0, 0, 0.432);">Faça Login ou Crie sua Conta para continuar</h1>
         <hr>
         <div class="row">
             <div class="col">
