--- a/comunidadeimpressionadora/templates/perfil.html
+++ b/comunidadeimpressionadora/templates/perfil.html
@@ -7,7 +7,7 @@
 
     	#cab {
     		box-shadow: 0px 1px 4px #00000085;
-			min-height: 30.5vh;
+			min-height: calc(12vh + 110px);
     	}
     
 	    #pf {
