--- a/comunidadeimpressionadora/templates/navbar.html
+++ b/comunidadeimpressionadora/templates/navbar.html
@@ -106,14 +106,16 @@
 
       #lmenu {
           display: flex;
+          font-size: .9rem;
           width: 100%;
-          padding: 0 5%;
+          padding: 0 3%;
           justify-content: space-between;
       }
 
       #menu-links {
           display: flex;
           gap: 1rem;
+          
       }
 
       #menu-login {
