--- a/comunidadeimpressionadora/templates/perfil.html
+++ b/comunidadeimpressionadora/templates/perfil.html
@@ -134,7 +134,7 @@
 
 {% block body %}
 
-<div id="cab">
+<div id="cab body">
     
     <div style="background: black url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQY3guJ4qjDP7jDghL_R7rpNM8ERV98VwKVLw&usqp=CAU');" id="pf">
       
@@ -162,6 +162,7 @@
 	  {% endif %}
     </div>
   </div>
+
 
 {% block form_editarperfil %}
 
