--- a/comunidadeimpressionadora/templates/base.html
+++ b/comunidadeimpressionadora/templates/base.html
@@ -11,6 +11,32 @@
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='perfil.css') }}">
 
+    
+    
+    <style>
+
+        @keyframes hide {
+            0% {opacity: 0}
+            20%  {opacity: 1}
+            to   {opacity: 0}
+        }
+        
+
+        .flash {
+            position: absolute;
+            top: 90%;
+            width: 100%;
+            line-height: 1rem;
+            opacity: 1;
+            animation: hide 12s 0s forwards;
+            z-index: 9999999;
+        }
+
+       
+
+    </style>
+
+
     {% block head %}
     {% endblock %}
 </head>
@@ -18,10 +44,8 @@
 
     {% include 'navbar.html' %}
 
-    <div class="container">
-    
-    	
-    	
+    <div class="flash">
+
         {% with mensagens = get_flashed_messages(with_categories=True) %}
             {% if mensagens %}
                 {% for categoria, mensagem in mensagens %}
@@ -32,7 +56,7 @@
             {% endif %}
         {% endwith %}
     </div>
-    <div class="container">
+    <div class="container body">
 
         {% block body %}
         {% endblock %}
