--- a/comunidadeimpressionadora/templates/login.html
+++ b/comunidadeimpressionadora/templates/login.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block body %}
-    <div class="container">
+    <div class="container mt-1 body">
         <h1 style="text-align: center; padding: 1rem; color: rgba(0, 0, 0, 0.432);">Faça Login ou Crie sua Conta para continuar</h1>
         <hr>
         <div class="row">
