--- a/comunidadeimpressionadora/templates/base.html
+++ b/comunidadeimpressionadora/templates/base.html
@@ -16,20 +16,21 @@
     <style>
 
         @keyframes hide {
-            0% {opacity: 0}
-            20%  {opacity: 1}
+            0%   {opacity: 0}
+            10%  {opacity: 1}
+            70%  {opacity: 1}
             to   {opacity: 0}
         }
         
 
         .flash {
-            position: absolute;
-            top: 90%;
+            position: fixed;
+            top: calc(65px + 1%);
             width: 100%;
             line-height: 1rem;
             opacity: 1;
             animation: hide 12s 0s forwards;
-            z-index: 9999999;
+            z-index: 9998;
         }
 
        
