--- a/comunidadeimpressionadora/templates/perfil.html
+++ b/comunidadeimpressionadora/templates/perfil.html
@@ -12,7 +12,7 @@
     
 	    #pf {
 	      width: 100%;
-	      height: 12vh;
+	      height: 15vh;
 	      box-shadow: 0px 1px 4px #00000085;
 	    }
 	    
@@ -136,7 +136,7 @@
 
 <div id="cab body">
     
-    <div style="background: black url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQY3guJ4qjDP7jDghL_R7rpNM8ERV98VwKVLw&usqp=CAU');" id="pf">
+    <div id="pf" style="background: black url('{{ bg_perfil }}');">
       
     </div>
     
