--- a/comunidadeimpressionadora/templates/editarperfil.html
+++ b/comunidadeimpressionadora/templates/editarperfil.html
@@ -55,6 +55,22 @@
                     	
                     
                     </div>
+
+                    <div class="form-group">
+                    	{{ form.bg_perfil_url.label(class="form-control-label") }}
+                        {{ form.bg_perfil_url(class="form-control-file mt-3") }}
+
+                        {{ form.bg_perfil_img(class="form-control-file mt-1") }}
+                        {% if form.bg_perfil_img.errors %}
+                            {% for erro in form.bg_perfil_img.errors %}
+
+                                <span class="text-danger">{{ erro }}</span>
+
+                            {% endfor %}
+                        {% endif %}
+                    </div>
+
+                    
                     
                 </fieldset>
                 {{ form.botao_submit_editarperfil(class="btn btn-primary mt-2") }}
