--- a/comunidadeimpressionadora/templates/perfil.html
+++ b/comunidadeimpressionadora/templates/perfil.html
@@ -12,7 +12,7 @@
     
 	    #pf {
 	      width: 100%;
-	      height: 15vh;
+	      height: 20vh;
 	      box-shadow: 0px 1px 4px #00000085;
 	    }
 	    
@@ -136,7 +136,7 @@
 
 <div id="cab body">
     
-    <div id="pf" style="background: black url('{{ bg_perfil }}');">
+    <div id="pf" style="background: rgb(203, 253, 255) url('{{ bg_perfil }}') no-repeat fixed; background-size: cover;">
       
     </div>
     
