--- a/comunidadeimpressionadora/templates/base.html
+++ b/comunidadeimpressionadora/templates/base.html
@@ -25,7 +25,7 @@
 
         .flash {
             position: fixed;
-            top: calc(65px + 3%);
+            top: calc(65px + 1.5rem);
             width: 100%;
             line-height: 1rem;
             opacity: 1;
