--- a/comunidadeimpressionadora/templates/contato.html
+++ b/comunidadeimpressionadora/templates/contato.html
@@ -3,6 +3,7 @@
 
 {% block body %}
     <div class="container">
-        <h1>Qualquer dúvida mande um e-mail para listavip@hashtagtreinamentos.com</h1>
+        <h1>Qualquer dúvida mande um e-mail para</h1>
+        <h3>listavip@hashtagtreinamentos.com</h3>
     </div>
 {% endblock %}
