--- a/comunidadeimpressionadora/templates/base.html
+++ b/comunidadeimpressionadora/templates/base.html
@@ -15,6 +15,11 @@
     
     <style>
 
+        :root {
+            --cor1: rgb(25, 158, 69);
+            --cor2: rgb(12, 75, 33);
+        }
+
         @keyframes hide {
             0%   {opacity: 0}
             10%  {opacity: 1}
