--- a/comunidadeimpressionadora/templates/perfil.html
+++ b/comunidadeimpressionadora/templates/perfil.html
@@ -89,12 +89,12 @@
 	   
 	   #btn-cursos {
 		 width: 60%;
-		 color: var(--cor1);
- 	     font-weight: bolder;
-		 border: 1px solid currentColor;
+		 color: white;
+ 	     font-weight: bold;
+		 border: none;
 		 border-radius: 5px;
 		 outline: none;
-		 background: transparent;
+		 background: var(--cor1);
 	   }
 
 	   #list-cursos {
@@ -102,25 +102,21 @@
 		height: 0px;
 		visibility: hidden;
 		overflow-y: hidden;
-		list-style: none;
-		padding-left: 0;
 		transition: .3s;
 	   }
 
+	   #list-cursos::-webkit-scrollbar {
+		display: none;
+	   }
+
 	   #list-cursos.active {
-		height: 100px;
+		height: 180px;
 		visibility: visible;
 		overflow-y: auto;
+		
+		
 	   }
 	   
-
-	   #list-cursos li span {
-		display: block;
-		padding: 2px;
-		margin-bottom: 1px;
-		color: rgba(2, 92, 22, 0.479);
-		background: rgba(35, 121, 35, 0.13);
-	   }
 
 	   @media (min-width: 800px) {
 
@@ -186,15 +182,28 @@
 			</thead>
 			<tbody>
 			<td class="sep">{{ current_user.id }}</td>
-			<td class="sep"><button id="btn-cursos">{{ n_cursos }}</button></td>
+
+			<td class="sep">
+				{% if current_user.cursos in ("não informado", "") %}
+					0
+				{% else %}
+					<button id="btn-cursos"> 
+						{{ current_user.cursos.count(";") + 1 }}
+					</button>
+				{% endif %}
+			</td>
+
 			<td>{{ current_user.posts }}</td>
 			</tbody>
 		</table>
-		<ul id="list-cursos" class="mt-2">
-			{% for curso in current_user.cursos.split(";") %}
-				<li class="container"><span>{{ curso }}</span></li>
-			{% endfor %}
-		</ul>
+		<div id="list-cursos" class="row justify-content-center">
+			<div class="col" style="text-align: center;">
+				Cursos <br>
+				{% for curso in current_user.cursos.split(";") %}
+					<button class="btn btn-success disabled mt-2">{{ curso }}</button>
+				{% endfor %}
+			</div>
+		</div>
 	  {% endif %}
     </div>
   </div>
